@@ -30,7 +30,7 @@
 	    make-label)
 
     ((open rep
-	   gui.gtk
+	   gui.gtk-2.gtk
 	   rep.regexp
 	   sawfish.ui.slot
 	   sawfish.gtk.widget)
