@@ -24,7 +24,7 @@
 (define-structure sawfish.ui.layouts.keymaps ()
 
     (open rep
-	  gui.gtk
+	  gui.gtk-2.gtk
 	  rep.regexp
 	  sawfish.ui.slot
 	  sawfish.ui.wm
