@@ -38,7 +38,7 @@
 	    custom-symbol-value)
 
     (open rep
-	  gui.gtk
+	  gui.gtk-2.gtk
 	  rep.system
 	  rep.data.tables
 	  rep.data.records
