@@ -24,7 +24,7 @@
 (define-structure sawfish.ui.widgets.keymap ()
 
     (open rep
-	  gui.gtk
+	  gui.gtk-2.gtk
 	  rep.regexp
 	  sawfish.gtk.stock
 	  sawfish.gtk.widget)
