@@ -1,3 +1,13 @@
+2002-01-29  John Harper  <jsh@unfactored.org>
+
+	* slot.jl, shell.jl, layout.jl, group.jl, apply.jl: 
+	* layouts/keymaps.jl: 
+	* widgets/workspace-geometry.jl, widgets/match-window.jl,
+	widgets/keymap.jl, widgets/icon.jl, widgets/frame-style.jl,
+	widgets/event.jl, widgets/command.jl: 
+
+	Changed module names for gnome2 rep-gtk
+
 2001-09-07  John Harper  <jsh@pixelslut.com>
 
 	* layouts/keymaps.jl (layout-keymaps): fixed bug of keymap
